--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
   nexplayer.AdsEvents("adpaused", function (e) {
     console.log('AD PAUSED', e);
   });
-  nexplayer.AdsEvents("adclick", function (e) {
+  nexplayer.AdsEvents("adclicked", function (e) {
     console.log('AD CLICK', e);
   });
   nexplayer.AdsEvents("adclosed", function (e) {
     console.log('AD CLOSED', e);
   });
-  nexplayer.AdsEvents("addurationchange", function (e) {
+  nexplayer.AdsEvents("addurationchanged", function (e) {
     console.log('AD DURATION CHANGE', e);
   });
   nexplayer.AdsEvents("adimpression", function (e) {
