--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  <title>PS4 Ads</title>
+  <title>TEST</title>
 <style type="text/css">
   #player_container {
     width: 100%;
