--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  <title>TEST</title>
+<!doctype html>
+<html>
+<head>
+  <title>PS4 Ads</title>
+</head>
 <style type="text/css">
   #player_container {
     width: 100%;
@@ -8,158 +10,128 @@
     margin: auto;
     position: absolute;
   }
-</style><style>.nexplayer_ad_container {
-    width: 100%;
-    height: 100%;
-    display: inherit;
-    position: absolute;
-    top: 0px;
-}
-
-.rmp-container {
-    display: inherit;
-    height: inherit !important;
-}</style></head>
-
+</style>
 <body>
 
-  <div id="player_container"><div id="player" style="width: 100%; height: auto; position: relative;"><div id="nexplayer_ad_container" class="nexplayer_ad_container" style="display: inherit;"></div></div></div>
+  <div id="player_container"></div>
   <script src="./nexplayer-1.2.6.js"></script>
 <div>
-
+</body>
 <script>
+  var player = new nexplayer.NexPlayer();
 
   //#region Player Events https://nexplayer.github.io/TizenWebOS/#/ps4/api?id=player-events
-  nexplayer.PlayerEvents("statechanged", function (e) {
+  player.addEventListener("statechanged", function (e) {
     console.log(" STATE CHANGED", e);
   });
-  nexplayer.PlayerEvents("paused", function (e) {
+  player.addEventListener("paused", function (e) {
     console.log("PAUSED");
   });
-  nexplayer.PlayerEvents("playing", function (e) {
+  player.addEventListener("playing", function (e) {
     console.log("PLAYING");
   });
-  nexplayer.PlayerEvents("buffering", function (e) {
+  player.addEventListener("buffering", function (e) {
     console.log("BUFFERING");
   });
-  nexplayer.PlayerEvents("seeking", function (e) {
+  player.addEventListener("seeking", function (e) {
     console.log("SEEKING");
   });
-  nexplayer.PlayerEvents("seeked", function (e) {
+  player.addEventListener("seeked", function (e) {
     console.log("SEEKED");
   });
-  nexplayer.PlayerEvents("stalled", function (e) {
+  player.addEventListener("stalled", function (e) {
     console.log("STALLED");
   });
-  nexplayer.PlayerEvents("durationchange", function (e) {
+  player.addEventListener("durationchange", function (e) {
     console.log("DURATION CHANGE", e);
   });
-  nexplayer.PlayerEvents("canplay", function (e) {
+  player.addEventListener("canplay", function (e) {
     console.log("CAN PLAY");
   });
-  nexplayer.PlayerEvents("loadeddata", function (e) {
+  player.addEventListener("loadeddata", function (e) {
     console.log("LOADED DATA");
   });
-  nexplayer.PlayerEvents("videofirstquartile", function (e) {
+  player.addEventListener("videofirstquartile", function (e) {
     console.log(" VIDEO FIRST QUARTILE", e);
   });
-  nexplayer.PlayerEvents("videoProgressTime", function (e) {
+  player.addEventListener("videoProgressTime", function (e) {
     console.log("VIDEO PROGRESS TIME", e);
   });
-  nexplayer.PlayerEvents("videothirdquartile", function (e) {
+  player.addEventListener("videothirdquartile", function (e) {
     console.log("VIDEO THIRD QUARTILE", e);
   });
-  nexplayer.PlayerEvents("nexplayererror", function (e) {
+  player.addEventListener("nexplayererror", function (e) {
     console.log("NEXPLAYER ERROR", e);
   });
   //#endregion
 
   //#region Ads Events https://nexplayer.github.io/TizenWebOS/#/ps4/api?id=ads-events
-  nexplayer.AdsEvents("adstarted", function (e) {
+  player.addEventListener("adstarted", function (e) {
     console.log('AD STARTED', e);
     nexplayer.AdInstance().setMute(false);
     nexplayer.AdInstance().getAdDuration();
     nexplayer.AdInstance().getAdRemainingTime();
   });
-  nexplayer.AdsEvents("adpodsinfo", function (e) {
+  player.addEventListener("adpodsinfo", function (e) {
     console.log('AD PODS INFO', e);
   });
-  nexplayer.AdsEvents("aderror", function (e) {
+  player.addEventListener("aderror", function (e) {
     console.log('AD ERROR', e);
   });
-  nexplayer.AdsEvents("adblockstarted", function (e) {
+  player.addEventListener("adblockstarted", function (e) {
     console.log('AD BLOCK START', e);
   });
-  nexplayer.AdsEvents("adblockend", function (e) {
+  player.addEventListener("adblockend", function (e) {
     console.log('AD BLOCK END', e);
   });
-  nexplayer.AdsEvents("adstarted", function (e) {
+  player.addEventListener("adstarted", function (e) {
     console.log('AD STARTED', e);
   });
-  nexplayer.AdsEvents("adcomplete", function (e) {
+  player.addEventListener("adcomplete", function (e) {
     console.log('AD COMPLETE', e);
   });
-  nexplayer.AdsEvents("adthirdquartile", function (e) {
+  player.addEventListener("adthirdquartile", function (e) {
     console.log('AD THIRDQUARTILE', e);
   });
-  nexplayer.AdsEvents("admidpoint", function (e) {
+  player.addEventListener("admidpoint", function (e) {
     console.log('AD MIDPOINT', e);
   });
-  nexplayer.AdsEvents("adfirstquartile", function (e) {
+  player.addEventListener("adfirstquartile", function (e) {
     console.log('AD FIRST QUARTILE', e);
   });
-  nexplayer.AdsEvents("addestroyed", function (e) {
+  player.addEventListener("addestroyed", function (e) {
     console.log('AD DESTROYED', e);
   });
-  nexplayer.AdsEvents("adtagstartloading", function (e) {
+  player.addEventListener("adtagstartloading", function (e) {
     console.log('AD TAG START LOADING', e);
   });
-  nexplayer.AdsEvents("adloaded", function (e) {
+  player.addEventListener("adloaded", function (e) {
     console.log('AD LOADED', e);
   });
-  nexplayer.AdsEvents("adresumed", function (e) {
+  player.addEventListener("adresumed", function (e) {
     console.log('AD RESUMED', e);
   });
-  nexplayer.AdsEvents("adpaused", function (e) {
+  player.addEventListener("adpaused", function (e) {
     console.log('AD PAUSED', e);
   });
-  nexplayer.AdsEvents("adclicked", function (e) {
-    console.log('AD CLICK', e);
-  });
-  nexplayer.AdsEvents("adclosed", function (e) {
-    console.log('AD CLOSED', e);
-  });
-  nexplayer.AdsEvents("addurationchanged", function (e) {
-    console.log('AD DURATION CHANGE', e);
-  });
-  nexplayer.AdsEvents("adimpression", function (e) {
+  player.addEventListener("adimpression", function (e) {
     console.log('AD IMPRESSION', e);
   });
-  nexplayer.AdsEvents("adskipped", function (e) {
+  player.addEventListener("adskipped", function (e) {
     console.log('AD SKIPPED', e);
   });
   //#endregion
 
-  var player = null;
-
-  var cb = function (nexplayerInstance, video) {
-    console.log("callbacksForPlayer!");
-    console.log(nexplayerInstance);
-
-    player = nexplayerInstance;
-  }
-
-  nexplayer.Setup({
+  player.init({
     key: '5e9dd7b892f3493ec4667e66',
     div: document.getElementById('player_container'),
     debug: true,
     autoplay: true,
     resumePosition: 0,
-    callbacksForPlayer: cb,
     src: 'https://media.axprod.net/TestVectors/Dash/not_protected_dash_1080p_h264/manifest.mpd',
     // Google Sample tag (VMAP Pre-roll):
     vast: 'https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/vmap_ad_samples&sz=640x480&cust_params=sample_ar%3Dpreonly&ciu_szs=300x250%2C728x90&gdfp_req=1&ad_rule=1&output=vmap&unviewed_position_start=1&env=vp&impl=s&correlator=' + Date.now(),
   });
 </script>
 
-</div></body></html>
+</html>
