--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
 <body>
 
   <div id="player_container"><div id="player" style="width: 100%; height: auto; position: relative;"><div id="nexplayer_ad_container" class="nexplayer_ad_container" style="display: inherit;"></div></div></div>
-  <script src="./nexplayer-1.2.6.js"></script>
+  <script src="./nexplayer-web.js"></script>
 <div>
 
 <script>
@@ -154,7 +154,7 @@
     div: document.getElementById('player_container'),
     debug: true,
     autoplay: true,
-    resumePosition: 0,
+    resumePosition: 60,
     callbacksForPlayer: cb,
     src: 'https://media.axprod.net/TestVectors/Dash/not_protected_dash_1080p_h264/manifest.mpd',
     // Google Sample tag (VMAP Pre-roll):
