--- a/index2.html
+++ b/index2.html
@@ -132,9 +132,7 @@
           callbacksForPlayer: callBackWithPlayers,
           src: 'https://media.axprod.net/TestVectors/Dash/not_protected_dash_1080p_h264/manifest.mpd',
           adsMode: 'ima',
-          vast: 'https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/' +
-          'vmap_ad_samples&sz=640x480&cust_params=sample_ar%3Dpreonly&ciu_szs=300x250%2C728x90&gdfp_req=1&' +
-          'ad_rule=1&output=vmap&unviewed_position_start=1&env=vp&impl=s&correlator=' + Date.now(),
+          vast: 'https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/vmap_ad_samples&sz=640x480&cust_params=sample_ar%3Dpreonly&ciu_szs=300x250%2C728x90&gdfp_req=1&ad_rule=1&output=vmap&unviewed_position_start=1&env=vp&impl=s&correlator=' + Date.now(),
           configuration: {
             drm: {
               advanced: {
