--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
   <div id="player-container" class="center">
       <div id="player"></div>
   </div>
-  <script src="./nexplayer4.js"></script>
+  <script src="./nexplayer-web.js"></script>
   <script type="text/javascript">
       let player = null;
       let video = null;
