--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@
           debug: true,
           callbacksForPlayer: callBackWithPlayers,
           src: 'https://media.axprod.net/TestVectors/Dash/not_protected_dash_1080p_h264/manifest.mpd',
-          //adsMode: 'ima',
+          adsMode: 'ima',
           vast: 'https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/vmap_ad_samples&sz=640x480&cust_params=sample_ar%3Dpreonly&ciu_szs=300x250%2C728x90&gdfp_req=1&ad_rule=1&output=vmap&unviewed_position_start=1&env=vp&impl=s&correlator=' + Date.now(),
           // Use this property when the app detects that the user resumes from
           // a bookmark or is in session for more than 40 minutes.
