--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
   <div id="player-container" class="center">
       <div id="player"></div>
   </div>
-  <script type="text/javascript" src="https://imasdk.googleapis.com/js/sdkloader/ima3.js" defer="defer"></script>
+  <script type="text/javascript" src="https://imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
   <script src="./nexplayer-web.js"></script>
   <script type="text/javascript">
       let player = null;
